# anatomyflow

./: .gitignore  ESTADO_Y_MEJORAS.md  README.md
agent/: README.md  anatomydb.json  config.backend.example.json  config.backend.example.yaml  config.connection-string.example.yaml  config.example.json  config.example.yaml  config.go  config.yaml  go.mod  go.sum  main.go  ws_client.go
analyzer/: README.md  env.example  extract_deps.py  pyproject.toml
analyzer/project_types/: README.md  __init__.py  express.py  generic_node.py  laravel.py  nestjs.py  nextjs.py
backend/: GITHUB_OAUTH_SETUP.md  README.md  db.py  env.example  main.py  pyproject.toml  requirements.txt
backend/scripts/: test_neo4j_connection.py
backend/tests/: conftest.py  test_api.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: sample-graph.json
frontend/src/: App.jsx  constants.js  index.css  main.jsx
frontend/src/components/: README.md
frontend/src/components/atoms/: Badge.jsx  Button.jsx  ColorDot.jsx  Text.jsx  index.js
frontend/src/components/molecules/: FileInputLabel.jsx  LegendItem.jsx  index.js
frontend/src/components/organisms/: AnatomyNode.jsx  AppHeader.jsx  ClusterBg.jsx  CodePanel.jsx  PathPanel.jsx  index.js
frontend/src/components/templates/: GraphLayout.jsx
frontend/src/lib/: api.js  graphUtils.js
frontend/src/pages/: NewProjectForm.jsx  ProjectDetail.jsx  ProjectsList.jsx
