[project]
name = "projectanatomy-analyzer"
version = "0.1.0"
description = "Dependency extraction from schema + controller via LLM (Groq, OpenAI, Anthropic)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
extract-deps = "extract_deps:main"

[tool.uv]
package = true

[dependency-groups]
dev = []
