[project]
name = "projectanatomy-backend"
version = "0.1.0"
description = "API para esquema + grafo (React Flow); persistencia opcional en Neo4j"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "neo4j>=5.14.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]
